--- a/Docker-Files/Dockerfile
+++ b/Docker-Files/Dockerfile
@@ -1,12 +1,13 @@
 FROM python:3.6.1-alpine
+ARG PROJECT_NAME
 RUN apk update \
   &amp;&amp; apk add \
     build-base \
     postgresql \
     postgresql-dev \
     libpq
-RUN mkdir /usr/src/app
-WORKDIR /usr/src/app
+RUN mkdir /var/www/html/${PROJECT_NAME}
+WORKDIR /var/www/html/${PROJECT_NAME}
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 ENV PYTHONUNBUFFERED 1
