We got the instance to initialize

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,13 @@ services:
         build: 
           args:
             - PROJECT_NAME=${PROJECT_NAME} 
+            - OPENAI_API_KEY =${OPENAI_API_KEY}
           dockerfile: Docker-Files/Dockerfile 
         working_dir: /var/www/html/${PROJECT_NAME}
         volumes:
             - "./Project:/var/www/html/${PROJECT_NAME}"
+        ports: 
+            - "7860:7860"
         env_file: 
             - .env
 
